--- a/.github/workflows/update_espn_forecasts.yml
+++ b/.github/workflows/update_espn_forecasts.yml
@@ -10,17 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout nba-predictions repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         path: nba-predictions
     
     - name: Setup GitHub Action for R language
-      uses: r-lib/actions/setup-r@v1
-
-    - name: Install system dependencies
-      run: sudo apt-get install libudunits2-dev libcurl4-openssl-dev libgdal-dev
+      uses: r-lib/actions/setup-r@v2
 
     - name: Install R script dependencies
       working-directory: ./nba-predictions
       run: Rscript .github/workflows/install_dependencies.R
-
+      env:
+        GH_TOKEN: ${{secrets.GH_TOKEN}}
+  
