--- a/.github/workflows/update_espn_forecasts.yml
+++ b/.github/workflows/update_espn_forecasts.yml
@@ -2,7 +2,7 @@ name: Update ESPN forecast
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 16 * * 0'
+    - cron: '0 12 * * 1' # Mondays (1) at 12:00pm
 
 jobs:
   run_script:
@@ -21,5 +21,5 @@ jobs:
       working-directory: ./nba-predictions
       run: Rscript .github/workflows/install_dependencies.R
       env:
-        GH_TOKEN: ${{secrets.GH_TOKEN}}
-  
+        GITHUB_PAT: ${{secrets.GH_TOKEN}}
+
