--- a/.github/workflows/update_espn_forecasts.yml
+++ b/.github/workflows/update_espn_forecasts.yml
@@ -9,6 +9,7 @@ jobs:
     if: github.repository_owner == 'reichlab'
     runs-on: ubuntu-latest
     steps:
+
     - name: Checkout nba-predictions repo
       uses: actions/checkout@v3
       with:
@@ -17,9 +18,23 @@ jobs:
     - name: Setup GitHub Action for R language
       uses: r-lib/actions/setup-r@v2
 
+    - name: Install system dependencies ## at least curl needed for R package curl
+      run: sudo apt-get install libudunits2-dev libcurl4-openssl-dev libgdal-dev
+
     - name: Install R script dependencies
       working-directory: ./nba-predictions
       run: Rscript .github/workflows/install_dependencies.R
       env:
         GITHUB_PAT: ${{secrets.GH_TOKEN}}
 
+    # - name: scrape and push ESPN-BPI predictions
+    #   run: Rscript ./nba-predictions/code/scrape-and-push-espn-2022.R
+    #   env:
+    #     Z_USERNAME: ${{ secrets.Z_USERNAME }}
+    #     Z_PASSWORD: ${{ secrets.Z_PASSWORD }}
+    # 
+    # - name: Push generated files to GitHub
+    #   run: bash .github/workflows/push-gh.sh
+    #   working-directory: ./nba-predictions
+    #   env:
+    #     GITHUB_PAT: ${{secrets.GH_TOKEN}}
