--- a/.github/workflows/update_espn_forecasts.yml
+++ b/.github/workflows/update_espn_forecasts.yml
@@ -29,6 +29,7 @@ jobs:
 
     - name: scrape and push ESPN-BPI predictions
       run: Rscript ./nba-predictions/code/scrape-and-push-espn-2022.R
+      working-directory: ./nba-predictions
       env:
         Z_USERNAME: ${{ secrets.Z_USERNAME }}
         Z_PASSWORD: ${{ secrets.Z_PASSWORD }}
