--- a/.github/workflows/update_espn_forecasts.yml
+++ b/.github/workflows/update_espn_forecasts.yml
@@ -28,8 +28,8 @@ jobs:
         GITHUB_PAT: ${{secrets.GH_TOKEN}}
 
     - name: scrape and push ESPN-BPI predictions
-      run: Rscript ./nba-predictions/code/scrape-and-push-espn-2022.R
       working-directory: ./nba-predictions
+      run: Rscript code/scrape-and-push-espn-2022.R
       env:
         Z_USERNAME: ${{ secrets.Z_USERNAME }}
         Z_PASSWORD: ${{ secrets.Z_PASSWORD }}
